# makemore

./: .gitignore  CLAUDE.md  Prompts.md  README.md  makemore.py  makemore_part1_bigrams.py  makemore_part2_mlp.py  makemore_part3_bn.py  pyproject.toml
